# qt_cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: BuildDoxygen.cmake  FindLibxxx.cmake
docs/: Doxyfile.in
libs/: CMakeLists.txt
libs/MathFunctions/: CMakeLists.txt  Config.cmake.in
libs/MathFunctions/src/: MathFunctions.cpp  mysqrt.cpp
resources/: icon.qrc
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/qtgui/: CMakeLists.txt
src/qtgui/include/: qtcmakewindow.h
src/qtgui/src/: qtcmakewindow.cpp
src/qtgui/ui/: qtcmakewindow.ui
